--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,31 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # main 브랜치에 푸시될 때마다 배포 실행
+      - main
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # GitHub Actions의 실행 환경
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # 코드 체크아웃
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'  # 원하는 Node.js 버전 설정
+          node-version: 18
 
       - name: Install dependencies
-        run: npm install  # 의존성 설치
+        run: npm install
 
-      - name: Build project
-        run: npm run build  # 빌드 실행
+      - name: Build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3  # GitHub Pages 배포 액션
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # 자동으로 인증 처리
-          publish_dir: ./build  # 배포할 디렉토리 (React 빌드 후 /build 폴더)
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          user_name: 'github-actions[bot]'
+          user_email: '41898282+github-actions[bot]@users.noreply.github.com'
